Bigfix namespace conflicts

--- a/Pierres/Views/Treats/Details.cshtml
+++ b/Pierres/Views/Treats/Details.cshtml
@@ -27,8 +27,8 @@ else
 }
 
 <p>
-  @Html.ActionLink("Add Flavor", "AddFlavor", new { id = Model.RecipeId })
+  @Html.ActionLink("Add Flavor", "AddFlavor", new { id = Model.TreatsId })
   @Html.ActionLink("Back to list", "Index")</p>
-  @Html.ActionLink("Edit Treat", "Edit", new { id = Model.RecipeId })   
-  @Html.ActionLink("Delete Treat", "Delete", new { id = Model.RecipeId })
+  @Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatsId })   
+  @Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatsId })
 </p>
