--- a/Pierres/Views/Treats/Details.cshtml
+++ b/Pierres/Views/Treats/Details.cshtml
@@ -1,5 +1,4 @@
-@model Pierres.Models.Treat
-@using System
+@model Pierres.Models.Treat;
 
 <h2>Treat Details</h2>
 <hr />
@@ -27,8 +26,8 @@ else
 }
 
 <p>
-  @Html.ActionLink("Add Flavor", "AddFlavor", new { id = Model.TreatsId })
+  @Html.ActionLink("Add Flavor", "AddFlavor", new { id = Model.TreatId })
   @Html.ActionLink("Back to list", "Index")</p>
-  @Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatsId })   
-  @Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatsId })
+  @Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatId })   
+  @Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatId })
 </p>
