--- a/Pierres/Views/Flavors/Details.cshtml
+++ b/Pierres/Views/Flavors/Details.cshtml
@@ -20,7 +20,8 @@ else
 }
 
 <p>
-  @Html.ActionLink("FLAVORS", "Index")
-  @Html.ActionLink("EDIT FLAVOR", "Edit", new { id = Model.FlavorId })
-  @Html.ActionLink("REMOVE FLAVOR", "Delete", new { id = Model.FlavorId })
+  @Html.ActionLink("FLAVORS", "Index")&nbsp;&nbsp;&nbsp;&nbsp;
+  @Html.ActionLink("EDIT FLAVOR", "Edit", new { id = Model.FlavorId })&nbsp;&nbsp;&nbsp;&nbsp;
+  @Html.ActionLink("REMOVE FLAVOR", "Delete", new { id = Model.FlavorId })&nbsp;&nbsp;&nbsp;&nbsp;
+  @Html.ActionLink("HOME", "Index", "Home")&nbsp;&nbsp;&nbsp;&nbsp;
 </p>
