--- a/Pierres/Views/Home/Index.cshtml
+++ b/Pierres/Views/Home/Index.cshtml
@@ -1,5 +1,8 @@
 ﻿<h1>Welcome to Pierres Sweet Treats</h1>
 
-<p>@Html.ActionLink("Log In", "Index", "Account")</p>
-<p>@Html.ActionLink("View Treats by Flavor", "Index", "Flavors")</p>
-<p>@Html.ActionLink("View Flavors by Treats", "Index", "Treats")</p>
+@* <img alt="Croissant" src="~/css/Croissant.png"> *@
+<p>
+    @Html.ActionLink("Log In", "Index", "Account")&nbsp;&nbsp;&nbsp;&nbsp;
+    @Html.ActionLink("Flavors", "Index", "Flavors")&nbsp;&nbsp;&nbsp;&nbsp;
+    @Html.ActionLink("Treats", "Index", "Treats")    
+</p>
