--- a/Pierres/Views/Treats/Create.cshtml
+++ b/Pierres/Views/Treats/Create.cshtml
@@ -8,4 +8,4 @@
   <input type="submit" value="Add new Treat" />
 }
 
-<p>@Html.ActionLink("TREATS", "Index")</p>
+<p>@Html.ActionLink("Show all Treats", "Index")</p>
