--- a/Pierres/Views/Treats/Index.cshtml
+++ b/Pierres/Views/Treats/Index.cshtml
@@ -14,5 +14,5 @@
   }
 </ul>
 
-<p>@Html.ActionLink("ADD A TREAT", "Create")</p>
+<p>@Html.ActionLink("ADD TREAT", "Create")</p>
 <p>@Html.ActionLink("HOME", "Index", "Home")</p>
