add rating display and Treat view authentication

--- a/Pierres/Views/Account/Login.cshtml
+++ b/Pierres/Views/Account/Login.cshtml
@@ -12,3 +12,4 @@
 
   <input type="submit" value="Log in" class="btn btn-default"/>
 }
+<p>Dont have an account? Sign up for free today! @Html.ActionLink("Register", "Register")</p>
