--- a/Pierres/Views/Treats/Edit.cshtml
+++ b/Pierres/Views/Treats/Edit.cshtml
@@ -10,7 +10,7 @@
   @Html.EditorFor(model => model.TreatName)
 
   @Html.Label("Select treat")
-  @Html.DropDownList("TreatId")
+  @Html.DropDownList("FlavorId")
 
   @Html.LabelFor(model => model.Rating)
   @Html.EditorFor(model => model.Rating)
