--- a/Pierres/Views/Flavors/Details.cshtml
+++ b/Pierres/Views/Flavors/Details.cshtml
@@ -6,7 +6,7 @@
 
 @if (@Model.JoinEntities.Count == 0)
 {
-  <p> No flavors here, add one!</p>
+  <p> This Flavor has yet to be added to a treat</p>
 }
 else
 {
