--- a/Pierres/Views/Treats/Details.cshtml
+++ b/Pierres/Views/Treats/Details.cshtml
@@ -11,7 +11,7 @@
 }
 else
 {
-  <h4>Flavors this treat belongs to:</h4>
+  <h4>Flavors in this treat:</h4>
   <ul>
   @foreach (var join in Model.JoinEntities)
     {
